--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
@@ -58,7 +59,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method="POST" action="/tweets/">
+        <form method="POST" action="/tweets">
           <!-- <label for="tweet-text">What are you humming about?</label> --> 
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="submission">
@@ -68,24 +69,7 @@
         </form>
       </section>
       <section id="main-container">
-        <article class="tweet">
-          <header>
-            <h3 class="user">Mary Sue</h3>
-            <h3 class="handle">@MarySoo</h3>
-
-          </header>
-          <p class="tweetBody">This is a test tweet.</p>
-          <footer>
-            <p class="date">
-              10 days ago
-            </p>
-            <div class="icons">
-            <i class="fa-solid fa-flag"></i>
-            <i class="fa-solid fa-retweet"></i>
-            <i class="fa-solid fa-heart"></i>
-          </div>
-          </footer>
-        </article>
+        <!-- Tweets will go here -->
       </section>
     </main>
   </body>
