--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="newTweetHere">
         <p class="tweetTitle"><b>Write </b>a new tweet</p>
-        <i class="fa-solid fa-angles-down fa-1x fa-fade"></i>
+        <button id="composeTweet"><i class="fa-solid fa-angles-down fa-1x"></i></button>
       </div>
     </nav>
 
@@ -51,7 +51,7 @@
       </div>
       <br>
       <div class="name">
-          <h2>Your Name</h2>
+          <h2>Bernadette A</h2>
       </div>
     </header>
 
@@ -68,7 +68,7 @@
           <!-- <label for="tweet-text">What are you humming about?</label> --> 
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="submission">
-            <button type="submit">Tweet</button>
+            <button id="submitTweet" type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
